--- a/package.json
+++ b/package.json
@@ -10,8 +10,17 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/tailwindcss": "^6.12.0",
+    "@vueuse/nuxt": "^10.9.0",
+    "daisyui": "^4.10.2",
+    "nanoid": "^5.0.7",
     "nuxt": "^3.11.2",
+    "openai": "^4.37.1",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "vue3-markdown-it": "^1.0.10"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.12"
   }
 }
