--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxtjs/tailwindcss": "^6.12.0",
     "@vueuse/nuxt": "^10.9.0",
     "daisyui": "^4.10.2",
+    "html-to-image": "^1.11.11",
     "nanoid": "^5.0.7",
     "nuxt": "^3.11.2",
     "openai": "^4.37.1",
